--- a/public/template/assets/css/main.css
+++ b/public/template/assets/css/main.css
@@ -1139,12 +1139,11 @@ ul.activity-list > li {
   position: relative; }
 
 .profile-left {
-  padding-left: 0;
   float: left;
   width: 35%;
-  height: 100%;
-  position: absolute;
-  background-color: #F8F8F8; }
+  padding: 20px 25px; }
+  .profile-right .heading {
+    margin-top: 0; }
 
 .profile-right {
   float: right;
@@ -1165,7 +1164,7 @@ ul.activity-list > li {
 .profile-header {
   position: relative;
   text-align: center;
-  color: #fff; }
+  color: #000000; }
   .profile-header .overlay {
     display: block;
     content: "";
@@ -1173,13 +1172,10 @@ ul.activity-list > li {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2); }
+    background-color: rgba(255, 255, 255, 0.2); }
   .profile-header .profile-main {
     position: relative;
     padding: 20px;
-    background-image: url("../../assets/img/profile-bg.png");
-    background-repeat: no-repeat;
-    background-size: cover; }
   .profile-header .name {
     margin: 8px 0 0 0;
     font-size: 22px; }
